--- a/onewebaccess/home/templates/home/index.html
+++ b/onewebaccess/home/templates/home/index.html
@@ -1,1 +1,45 @@
-{% extends 'home/layout.html'%}
+{% extends 'home/layout.html' %}
+{% block content %}
+	<div class="card bg-light rounded-0 border-0">
+		<div class="card-header bg-light"><h4>Sign in</h4></div>
+		<div class="card-body">
+			<form method="POST" action="">
+				{{form.hidden_tag()}}
+				<div class="form-group">
+					<label>Email address</label>
+					{% if form.email.errors %}
+						{{ form.email(class="form-control is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.email.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.email(class="form-control",placeholder="Enter email @vxlsoftware.com")}}	
+					{% endif %}
+				</div>
+				<div class="form-group">
+					<label>Password</label>
+					{% if form.password.errors %}
+						{{ form.password(class="form-control is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.password.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.password(class="form-control",placeholder="Password")}}	
+					{% endif %}
+				</div>
+				<div class="form-group">
+					{{ form.submit(class="btn btn-primary")}}
+				</div>
+				<div class="border-top pt-2">
+					<small class="text-muted">
+						Need An Account? <a class="ml-2" href="{{url_for('home.signup')}}">Sign Up Now</a>
+					</small>
+				</div>
+			</form>
+		</div>
+	</div>
+{% endblock content %}
