--- a/onewebaccess/home/templates/home/layout.html
+++ b/onewebaccess/home/templates/home/layout.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-
+	  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <title>{{title}}</title>
   </head>
@@ -18,64 +17,54 @@
   	<!--Navigation-->
   	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
   		<div class="container">
-  			<a class="navbar-brand" href="#">VXL OneWebAccess</a>
+  			<a class="navbar-brand" href="{{url_for('home.home')}}">VXL OneWebAccess</a>
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
   				<span class="navbar-toggler-icon"></span>
   			</button>
   			<div class="collapse navbar-collapse" id="navbarResponsive">
   				<ul class="navbar-nav ml-auto">
-  					<li class="nav-item">
-  						<a class="nav-link" href="{{url_for('home.home')}}">Sign in <span class="sr-only">(current)</span></a>
-  					</li>
-  					<li class="nav-item">
-  						<a class="nav-link" href="{{url_for('home.signup')}}">Sign up<span class="sr-only">(current)</span></a>
-  					</li>
+            {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('home.logout')}}">Logout <span class="sr-only">(current)</span></a>
+             </li>
+            {% else %}
+  					 <li class="nav-item">
+  						  <a class="nav-link" href="{{url_for('home.signin')}}">Sign in <span class="sr-only">(current)</span></a>
+  					 </li>
+  					 <li class="nav-item">
+  						  <a class="nav-link" href="{{url_for('home.signup')}}">Sign up<span class="sr-only">(current)</span></a>
+  					 </li>
+             {% endif %}
   				</ul>
   			</div>
   		</div>
   	</nav>
-  	<!--Jumbotron-->
-  	<div class="jumbotron">
-  		<div class="container">
-  		<div class="row">
-  			<div class="col-sm-6">
-  					<h1 class="display-4 text-center">Hello, welcome!</h1>
-  					<p class="text-center text-info">One Web Access is a one point access to all the below services</p>
-  					<hr class="my-2">
-  					<div class="row">
-  						<div class="col">
-  							<ul style="list-style-type:none;">
-  								<li class="mt-2"><i class="fas fa-blog mr-2"></i> Knowledge Base Blog</li>
-  								<li class="mt-2"><i class="fas fa-headset mr-2"></i> Clientele Call Logs</li>
-  								<li class="mt-2"><i class="fas fa-laptop mr-2"></i> Register remote nodes</li>
-  							</ul>
-  						</div>
-  						<div class="col">
-  							<ul style="list-style-type:none;">
-  								<li class="mt-2"><i class="fas fa-box mr-2"></i> Package Building</li>
-  								<li class="mt-2"><i class="fas fa-cubes mr-2"></i> Firmware Updates</li>
-  								<li class="mt-2"><i class="fas fa-diagnoses mr-2"></i> Image Build</li>
-  							</ul>		
-  						</div>
-  					</div>
-  			</div>
-  			<div class="col-sm-6">
-  				{% block content %}
-  				{% endblock content %}
-  			</div>
-  		</div>
-  		</div>	
-	</div>
-	<!--Services Card-->
-	<div class="container">
-		<div class="card">
-			<div class="card-body">
-				<h5 class="card-title">Knowledge Base Blog</h5>
-				<p class="card-text">Be first to share your Knowledge</p>
-				<a href="#" class="btn btn-primary"></a>
-			</div>
-		</div>
-	</div>
+    <!--Messages-->
+    <div class="container pt-3">
+      <div class="row  pt-3">
+        <div class="col">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category,message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible col-lg">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  {{message}}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+      </div>
+    </div>
+    <!--Main-->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          {% block content %} {% endblock content %}
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
