--- a/onewebaccess/home/templates/home/index.html
+++ b/onewebaccess/home/templates/home/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="col">	
   			<ul style="list-style-type:none;">
-  				<li class="mt-2"><i class="fas fa-box mr-3"></i><a href="">Package Building</a></li>
+  				<li class="mt-2"><i class="fas fa-box mr-3"></i><a href="{{url_for('packagebuild.home')}}">Package Builder</a></li>
   				<li class="mt-2"><i class="fas fa-cubes mr-3"></i><a href="">Firmware Updates</a></li>
   				<li class="mt-2"><i class="fas fa-diagnoses mr-3"></i><a href="">Image Build</li>
   			</ul>
