--- a/onewebaccess/home/templates/home/layout.html
+++ b/onewebaccess/home/templates/home/layout.html
@@ -65,6 +65,12 @@
         </div>
       </div>
     </div>
+    <!--Footer-->
+    <div class="footer container-lg width-full px-3" role="contentinfo">
+      <hr>
+       <p class="text-center text-muted text-decoration-none">&copy; VXL Software 2020-2021 <small class="text-info">Powered by Flask</small> </p>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
