--- a/onewebaccess/home/templates/home/login.html
+++ b/onewebaccess/home/templates/home/login.html
@@ -1,8 +1,8 @@
 {% extends 'home/layout.html' %}
 {% block content %}
 	<div class="cardborder-0">
-		<div class="card-header"><h4>Sign in</h4></div>
-  		<div class="card-body">
+		<div class="card-header bg-dark text-white"><h4>Sign in</h4></div>
+  		<div class="card-body bg-light">
   		<form method="POST" action="">
   			{{form.hidden_tag()}}
   			<div class="form-group">
