--- a/onewebaccess/home/templates/home/register.html
+++ b/onewebaccess/home/templates/home/register.html
@@ -3,9 +3,8 @@
 	<form method="POST" action="">
 	{{ form.hidden_tag() }}
 		<div class="card border-0">
-  			<div class="card-header"><h4>Sign up</h4></div>
-  			<div class="card-body">
-
+  			<div class="card-header bg-dark text-white"><h4>Sign up</h4></div>
+  			<div class="card-body bg-light">
     			<div class="form-group">
     				<label>Username</label>
     				{% if form.username.errors %}
