--- a/onewebaccess/home/templates/home/index.html
+++ b/onewebaccess/home/templates/home/index.html
@@ -11,7 +11,7 @@
     		<ul style="list-style-type:none;">
   				<li class="mt-2"><i class="fas fa-blog mr-3"></i><a href="">Knowledge Base Blog</a> </li>
   				<li class="mt-2"><i class="fas fa-headset mr-3"></i><a href="">Clientele Call Logs</a></li>
-  				<li class="mt-2"><i class="fas fa-laptop mr-3"></i><a href="">Register remote nodes</a></li>
+  				<li class="mt-2"><i class="fas fa-laptop mr-3"></i><a href="{{url_for('registernode.home')}}">Register remote nodes</a></li>
 			</ul>
 		</div>
 		<div class="col">	
