--- a/onewebaccess/packagebuild/templates/packagebuild/build.html
+++ b/onewebaccess/packagebuild/templates/packagebuild/build.html
@@ -46,6 +46,12 @@
       			{{form.osarch(class="form-control")}}
     		</div>
   		</div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Remote Node</label>
+        <div class="col-sm-6">
+            {{form.remote_host_ip(class="form-control")}}
+        </div>
+      </div>
   		<div class="form-group row">
     		<label class="col-sm-2 col-form-label">Package Source</label>
     		<div class="col-sm-6">
