--- a/onewebaccess/home/templates/home/layout.html
+++ b/onewebaccess/home/templates/home/layout.html
@@ -40,12 +40,12 @@
   	</nav>
     <!--Messages-->
     <div class="container pt-3">
-      <div class="row  pt-3">
+      <div class="row">
         <div class="col">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category,message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible col-lg">
+                <div class="alert alert-{{ category }}">
                   <button type="button" class="close" data-dismiss="alert">&times;</button>
                   {{message}}
                 </div>
