--- a/onewebaccess/registernode/templates/registernode/home.html
+++ b/onewebaccess/registernode/templates/registernode/home.html
@@ -8,7 +8,7 @@
 	</nav>
 	<div class="container mt-3">
 	<div class="btn-group float-right mb-2" role="group" aria-label="Basic example">
-		<button type="button" class="btn btn-sm btn-info" disabled>Total Nodes : {{reg_node_count}}</button>
+		<button type="button" class="btn btn-sm btn-secondary" disabled>Total Nodes : {{reg_node_count}}</button>
 		<a class="btn btn-sm btn-primary btn-success" href="{{url_for('registernode.add')}}" role="button">Add new node</a>
 		<a class="btn btn-sm btn-primary btn-warning" href="{{url_for('registernode.home')}}"><span class="fas fa-refresh mb-1"></span></a>
 	</div>
@@ -27,11 +27,12 @@
   		<tbody>
   			{% if reg_node_count == 0 %}
     			<tr>
-      				<th scope="row">1</th>
+      				<th scope="row">NA</th>
       				<td>NA</td>
       				<td>NA</td>
       				<td>NA</td>
       				<td>NA</td>
+              <td>NA</td>
     			</tr>
     		{% else %}
     			{%set host_status = namespace(value=0) %}
@@ -42,12 +43,12 @@
       				<td>{{i.ipaddress}}</td>
       				<td>{{i.hostname}}</td>
       				{%if host_ip_status[host_status.value] == 'Running'%}
-      					<td><i class="fas fa-thumbs-up"></i></td>
+      					<td><i class="fas fa-thumbs-up" style="color: #2874a6"></i></td>
       				{% else %}
-      					<td><i class="fas fa-thumbs-down"></i></td>
+      					<td><i class="fas fa-thumbs-down" style="color: #cb4335"></i></td>
       				{% endif %}
       				{% if i.register_host_node == current_user %}
-      					<td><a href="#" class="badge badge-danger">Remove</a></td>
+      					<td><a href="#" class="badge badge-info">Remove</a></td>
       				{% else %}
       					<td>NA</td>
       				{% endif %}	
