--- a/onewebaccess/packagebuild/templates/packagebuild/build.html
+++ b/onewebaccess/packagebuild/templates/packagebuild/build.html
@@ -104,7 +104,7 @@
     		</div>
   	  	</div>
 	</form>
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
     document.getElementById("patchname").disabled = true;
     document.getElementById("patchmode").disabled = true;
     document.getElementById("remove").disabled = true;
@@ -127,5 +127,5 @@
         document.getElementById("installscript").disabled = true;
       }
      }
-  </script>
+  </script> -->
 {% endblock content %}
